<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <ScrollView 
        android:id="@+id/leftBar"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">
        
        <LinearLayout
	        style="@style/Toolbar"
	        android:layout_width="@dimen/bar_width"
	        android:layout_height="wrap_content"
	        android:background="@color/black"
	        android:gravity="center_vertical"
	        android:orientation="vertical" >
	
	        <ToggleButton
	            android:id="@+id/btnFood"
	            android:layout_width="@dimen/btn_width"
	            android:layout_height="@dimen/btn_width"
	            android:layout_gravity="center"
	            android:layout_marginTop="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:background="@drawable/fnb_btn"
	            android:textOff=""
	            android:textOn="" />
	        
	        <TextView
	            android:id="@+id/tvFood"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:textColor="@color/white"
	            android:textSize="12sp"
	        	android:text="@string/food" />
	
	        <ToggleButton
	            android:id="@+id/btnCafe"
	            android:layout_width="@dimen/btn_width"
	            android:layout_height="@dimen/btn_width"
	            android:layout_gravity="center"
	            android:layout_marginTop="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:background="@drawable/cafe_btn"
	            android:textOff=""
	            android:textOn="" />
	        
	        <TextView
	            android:id="@+id/tvCafe"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:textColor="@color/white"
	            android:textSize="12sp"
	        	android:text="@string/cafe" />
	
	        <ToggleButton
	            android:id="@+id/btnBank"
	            android:layout_width="@dimen/btn_width"
	            android:layout_height="@dimen/btn_width"
	            android:layout_gravity="center"
	            android:layout_marginTop="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:background="@drawable/bank_btn"
	            android:textOff=""
	            android:textOn="" />
	        
	        <TextView
	            android:id="@+id/tvBank"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:textColor="@color/white"
	            android:textSize="12sp"
	        	android:text="@string/bank" />
	
	        <ToggleButton
	            android:id="@+id/btnATM"
	            android:layout_width="@dimen/btn_width"
	            android:layout_height="@dimen/btn_width"
	            android:layout_gravity="center"
	            android:layout_marginTop="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:background="@drawable/atm_btn"
	            android:textOff=""
	            android:textOn="" />
	        
	        <TextView
	            android:id="@+id/tvATM"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:textColor="@color/white"
	            android:textSize="12sp"
	        	android:text="@string/atm" />
	
	        <ToggleButton
	            android:id="@+id/btnAR"
	            android:layout_width="@dimen/btn_width"
	            android:layout_height="@dimen/btn_width"
	            android:layout_gravity="center"
	            android:layout_marginTop="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:background="@drawable/ar_btn"
	            android:textOff=""
	            android:textOn="" />
	        
	        <TextView
	            android:id="@+id/tvAR"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:textColor="@color/white"
	            android:textSize="12sp"
	        	android:text="@string/ar" />
	
	        <ToggleButton
	            android:id="@+id/btnMore"
	            android:layout_width="@dimen/btn_width"
	            android:layout_height="@dimen/btn_width"
	            android:layout_gravity="center"
	            android:layout_marginTop="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:background="@drawable/more_btn"
	            android:textOff=""
	            android:textOn="" />
	        
	        <TextView
	            android:id="@+id/tvMore"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:textColor="@color/white"
	            android:textSize="12sp"
	        	android:text="@string/more" />
	    </LinearLayout>
        
    </ScrollView>

    <org.osmdroid.views.MapView
        android:id="@+id/mapOffView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/rightBar"
        android:layout_toRightOf="@+id/leftBar"
        tilesource="Mapnik"
        android:clickable="true" />

    <RelativeLayout
        android:id="@+id/rightBar"
        style="@style/Toolbar"
        android:layout_width="@dimen/bar_width"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/black"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvKM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/km"
            android:textColor="@color/orange"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvSeekValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvKM"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:textSize="15sp"
        	android:textStyle="bold" />

        <id.ohaiyo.singaporespots.util.VerticalSeekBar
            android:id="@+id/verSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_above="@+id/tvSeekValue"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:max="50"
            android:progress="5" />
    </RelativeLayout>

</RelativeLayout>